Add '1.21-rc1' sources