@@ -1,9 +1,7 @@
 package net.minecraft.commands.arguments.selector;
 
-import com.google.common.collect.Lists;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
-import java.util.ArrayList;
-import java.util.Collections;
+import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.UUID;
@@ -11,6 +9,7 @@ import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import javax.annotation.Nullable;
+import net.minecraft.Util;
 import net.minecraft.advancements.critereon.MinMaxBounds;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.arguments.EntityArgument;
@@ -20,6 +19,7 @@ import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.flag.FeatureFlagSet;
 import net.minecraft.world.level.entity.EntityTypeTest;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
@@ -40,7 +40,7 @@ public class EntitySelector {
    private final int maxResults;
    private final boolean includesEntities;
    private final boolean worldLimited;
-   private final Predicate<Entity> predicate;
+   private final List<Predicate<Entity>> contextFreePredicates;
    private final MinMaxBounds.Doubles range;
    private final Function<Vec3, Vec3> position;
    @Nullable
@@ -54,12 +54,12 @@ public class EntitySelector {
    private final EntityTypeTest<Entity, ?> type;
    private final boolean usesSelector;
 
-   public EntitySelector(int var1, boolean var2, boolean var3, Predicate<Entity> var4, MinMaxBounds.Doubles var5, Function<Vec3, Vec3> var6, @Nullable AABB var7, BiConsumer<Vec3, List<? extends Entity>> var8, boolean var9, @Nullable String var10, @Nullable UUID var11, @Nullable EntityType<?> var12, boolean var13) {
+   public EntitySelector(int var1, boolean var2, boolean var3, List<Predicate<Entity>> var4, MinMaxBounds.Doubles var5, Function<Vec3, Vec3> var6, @Nullable AABB var7, BiConsumer<Vec3, List<? extends Entity>> var8, boolean var9, @Nullable String var10, @Nullable UUID var11, @Nullable EntityType<?> var12, boolean var13) {
       super();
       this.maxResults = var1;
       this.includesEntities = var2;
       this.worldLimited = var3;
-      this.predicate = var4;
+      this.contextFreePredicates = var4;
       this.range = var5;
       this.position = var6;
       this.aabb = var7;
@@ -110,60 +110,58 @@ public class EntitySelector {
    }
 
    public List<? extends Entity> findEntities(CommandSourceStack var1) throws CommandSyntaxException {
-      return this.findEntitiesRaw(var1).stream().filter((var1x) -> {
-         return var1x.getType().isEnabled(var1.enabledFeatures());
-      }).toList();
-   }
-
-   private List<? extends Entity> findEntitiesRaw(CommandSourceStack var1) throws CommandSyntaxException {
       this.checkPermissions(var1);
       if (!this.includesEntities) {
          return this.findPlayers(var1);
       } else if (this.playerName != null) {
-         ServerPlayer var8 = var1.getServer().getPlayerList().getPlayerByName(this.playerName);
-         return (List)(var8 == null ? Collections.emptyList() : Lists.newArrayList(new ServerPlayer[]{var8}));
+         ServerPlayer var9 = var1.getServer().getPlayerList().getPlayerByName(this.playerName);
+         return var9 == null ? List.of() : List.of(var9);
       } else if (this.entityUUID != null) {
-         Iterator var7 = var1.getServer().getAllLevels().iterator();
+         Iterator var8 = var1.getServer().getAllLevels().iterator();
 
-         Entity var10;
-         do {
-            if (!var7.hasNext()) {
-               return Collections.emptyList();
+         while(var8.hasNext()) {
+            ServerLevel var10 = (ServerLevel)var8.next();
+            Entity var11 = var10.getEntity(this.entityUUID);
+            if (var11 != null) {
+               if (var11.getType().isEnabled(var1.enabledFeatures())) {
+                  return List.of(var11);
+               }
+               break;
             }
+         }
 
-            ServerLevel var9 = (ServerLevel)var7.next();
-            var10 = var9.getEntity(this.entityUUID);
-         } while(var10 == null);
-
-         return Lists.newArrayList(new Entity[]{var10});
+         return List.of();
       } else {
          Vec3 var2 = (Vec3)this.position.apply(var1.getPosition());
-         Predicate var3 = this.getPredicate(var2);
+         AABB var3 = this.getAbsoluteAabb(var2);
+         Predicate var4;
          if (this.currentEntity) {
-            return (List)(var1.getEntity() != null && var3.test(var1.getEntity()) ? Lists.newArrayList(new Entity[]{var1.getEntity()}) : Collections.emptyList());
+            var4 = this.getPredicate(var2, var3, (FeatureFlagSet)null);
+            return var1.getEntity() != null && var4.test(var1.getEntity()) ? List.of(var1.getEntity()) : List.of();
          } else {
-            ArrayList var4 = Lists.newArrayList();
+            var4 = this.getPredicate(var2, var3, var1.enabledFeatures());
+            ObjectArrayList var5 = new ObjectArrayList();
             if (this.isWorldLimited()) {
-               this.addEntities(var4, var1.getLevel(), var2, var3);
+               this.addEntities(var5, var1.getLevel(), var3, var4);
             } else {
-               Iterator var5 = var1.getServer().getAllLevels().iterator();
+               Iterator var6 = var1.getServer().getAllLevels().iterator();
 
-               while(var5.hasNext()) {
-                  ServerLevel var6 = (ServerLevel)var5.next();
-                  this.addEntities(var4, var6, var2, var3);
+               while(var6.hasNext()) {
+                  ServerLevel var7 = (ServerLevel)var6.next();
+                  this.addEntities(var5, var7, var3, var4);
                }
             }
 
-            return this.sortAndLimit(var2, var4);
+            return this.sortAndLimit(var2, var5);
          }
       }
    }
 
-   private void addEntities(List<Entity> var1, ServerLevel var2, Vec3 var3, Predicate<Entity> var4) {
+   private void addEntities(List<Entity> var1, ServerLevel var2, @Nullable AABB var3, Predicate<Entity> var4) {
       int var5 = this.getResultLimit();
       if (var1.size() < var5) {
-         if (this.aabb != null) {
-            var2.getEntities(this.type, this.aabb.move(var3), var4, var1, var5);
+         if (var3 != null) {
+            var2.getEntities(this.type, var3, var4, var1, var5);
          } else {
             var2.getEntities(this.type, var4, var1, var5);
          }
@@ -187,67 +185,90 @@ public class EntitySelector {
 
    public List<ServerPlayer> findPlayers(CommandSourceStack var1) throws CommandSyntaxException {
       this.checkPermissions(var1);
-      ServerPlayer var8;
+      ServerPlayer var9;
       if (this.playerName != null) {
-         var8 = var1.getServer().getPlayerList().getPlayerByName(this.playerName);
-         return (List)(var8 == null ? Collections.emptyList() : Lists.newArrayList(new ServerPlayer[]{var8}));
+         var9 = var1.getServer().getPlayerList().getPlayerByName(this.playerName);
+         return var9 == null ? List.of() : List.of(var9);
       } else if (this.entityUUID != null) {
-         var8 = var1.getServer().getPlayerList().getPlayer(this.entityUUID);
-         return (List)(var8 == null ? Collections.emptyList() : Lists.newArrayList(new ServerPlayer[]{var8}));
+         var9 = var1.getServer().getPlayerList().getPlayer(this.entityUUID);
+         return var9 == null ? List.of() : List.of(var9);
       } else {
          Vec3 var2 = (Vec3)this.position.apply(var1.getPosition());
-         Predicate var3 = this.getPredicate(var2);
+         AABB var3 = this.getAbsoluteAabb(var2);
+         Predicate var4 = this.getPredicate(var2, var3, (FeatureFlagSet)null);
          if (this.currentEntity) {
-            Entity var10 = var1.getEntity();
-            if (var10 instanceof ServerPlayer) {
-               ServerPlayer var9 = (ServerPlayer)var10;
-               if (var3.test(var9)) {
-                  return Lists.newArrayList(new ServerPlayer[]{var9});
+            Entity var11 = var1.getEntity();
+            if (var11 instanceof ServerPlayer) {
+               ServerPlayer var10 = (ServerPlayer)var11;
+               if (var4.test(var10)) {
+                  return List.of(var10);
                }
             }
 
-            return Collections.emptyList();
+            return List.of();
          } else {
-            int var5 = this.getResultLimit();
-            Object var4;
+            int var6 = this.getResultLimit();
+            Object var5;
             if (this.isWorldLimited()) {
-               var4 = var1.getLevel().getPlayers(var3, var5);
+               var5 = var1.getLevel().getPlayers(var4, var6);
             } else {
-               var4 = Lists.newArrayList();
-               Iterator var6 = var1.getServer().getPlayerList().getPlayers().iterator();
+               var5 = new ObjectArrayList();
+               Iterator var7 = var1.getServer().getPlayerList().getPlayers().iterator();
 
-               while(var6.hasNext()) {
-                  ServerPlayer var7 = (ServerPlayer)var6.next();
-                  if (var3.test(var7)) {
-                     ((List)var4).add(var7);
-                     if (((List)var4).size() >= var5) {
-                        return (List)var4;
+               while(var7.hasNext()) {
+                  ServerPlayer var8 = (ServerPlayer)var7.next();
+                  if (var4.test(var8)) {
+                     ((List)var5).add(var8);
+                     if (((List)var5).size() >= var6) {
+                        return (List)var5;
                      }
                   }
                }
             }
 
-            return this.sortAndLimit(var2, (List)var4);
+            return this.sortAndLimit(var2, (List)var5);
          }
       }
    }
 
-   private Predicate<Entity> getPredicate(Vec3 var1) {
-      Predicate var2 = this.predicate;
-      if (this.aabb != null) {
-         AABB var3 = this.aabb.move(var1);
-         var2 = var2.and((var1x) -> {
-            return var3.intersects(var1x.getBoundingBox());
-         });
+   @Nullable
+   private AABB getAbsoluteAabb(Vec3 var1) {
+      return this.aabb != null ? this.aabb.move(var1) : null;
+   }
+
+   private Predicate<Entity> getPredicate(Vec3 var1, @Nullable AABB var2, @Nullable FeatureFlagSet var3) {
+      boolean var4 = var3 != null;
+      boolean var5 = var2 != null;
+      boolean var6 = !this.range.isAny();
+      int var7 = (var4 ? 1 : 0) + (var5 ? 1 : 0) + (var6 ? 1 : 0);
+      Object var8;
+      if (var7 == 0) {
+         var8 = this.contextFreePredicates;
+      } else {
+         ObjectArrayList var9 = new ObjectArrayList(this.contextFreePredicates.size() + var7);
+         var9.addAll(this.contextFreePredicates);
+         if (var4) {
+            var9.add((var1x) -> {
+               return var1x.getType().isEnabled(var3);
+            });
+         }
+
+         if (var5) {
+            var9.add((var1x) -> {
+               return var2.intersects(var1x.getBoundingBox());
+            });
+         }
+
+         if (var6) {
+            var9.add((var2x) -> {
+               return this.range.matchesSqr(var2x.distanceToSqr(var1));
+            });
+         }
+
+         var8 = var9;
       }
 
-      if (!this.range.isAny()) {
-         var2 = var2.and((var2x) -> {
-            return this.range.matchesSqr(var2x.distanceToSqr(var1));
-         });
-      }
-
-      return var2;
+      return Util.allOf((List)var8);
    }
 
    private <T extends Entity> List<T> sortAndLimit(Vec3 var1, List<T> var2) {
